# WalletX

./: .gitignore  LICENSE  Makefile  README.md  looptool.py  pyproject.toml
docs/: PRD.md
requirements/: base.txt  dev.txt
src/: main.py
src/core/: __init__.py  card_split.py  derivation.py  entropy.py  mnemonic.py  seed.py  shamir.py  verification.py
src/utils/: __init__.py  output.py  validation.py  wordlists.py
tests/: __init__.py  test_entropy.py
