[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walletx"
version = "1.0.0"
description = "安全的Web3钱包助记词生成器，符合BIP-39/32/44标准"
authors = [{name = "WalletX Team", email = "team@walletx.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "cryptography>=41.0.0,<42.0.0",
    "mnemonic>=0.20,<1.0",
    "bip-utils>=2.8.0,<3.0.0", 
    "eth-account>=0.9.0,<1.0.0",
    "click>=8.1.0,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.0,<24.0.0",
    "flake8>=6.1.0,<7.0.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
]

[project.scripts]
walletx = "src.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=25"
]
testpaths = ["tests"] 